--- a/horizon/playground/coman+/config_walk_forces.yaml
+++ b/horizon/playground/coman+/config_walk_forces.yaml
@@ -1,23 +1,29 @@
 solver:
   type: ipopt
-  tol: 0.001
-  constr_viol_tol: 0.001
-  max_iter: 2000
+  ipopt.linear_solver: ma57
+  ilqr.verbose: true
+  ilqr.codegen_enabled: True
+  ilqr.codegen_workdir: /tmp/miao
+  ilqr.enable_gn: true
+  ilqr.max_iter: 100
+  ilqr.alpha_min: 0.01
+#  tol: 0.001
+#  constr_viol_tol: 0.001
+#  max_iter: 2000
+  # enable_gn: True
+  # verbose: True
+
 
 constraints: [final_base_x,           # required to set x-target for the walk
 #              final_base_y,
-              foot_contact_l_sole_ur,
-              foot_contact_l_sole_ul,
-              foot_contact_l_sole_lr,
-#              foot_contact_l_sole_ll,
-              foot_contact_r_sole_ur,
-              foot_contact_r_sole_ul,
-              foot_contact_r_sole_lr,
-#              foot_contact_r_sole_ll,
-#              foot_z_l_sole,
-#              foot_xy_l_sole,
-#              foot_z_r_sole,
-#              foot_xy_r_sole,
+              foot_contact_l_sole,    # required from the ActionManager
+              foot_contact_r_sole,    # required from the ActionManager
+              foot_z_l_sole,          # required from the ActionManager
+              foot_xy_l_sole,         # required from the ActionManager
+              foot_z_r_sole,          # required from the ActionManager
+              foot_xy_r_sole,         # required from the ActionManager
+              rot_l_sole,              # keep the sole straight
+              rot_r_sole               # keep the sole straight
               ]
               # task_base_x,
               # final_x,
@@ -44,152 +50,71 @@ rot_l_sole:
   type: Cartesian
   distal_link: l_sole
   indices: [3, 4, 5]
-  nodes: all
+  nodes: ${range(1, N)}
   cartesian_type: velocity
 
 rot_r_sole:
   type: Cartesian
   distal_link: r_sole
   indices: [3, 4, 5]
-  nodes: all
+  nodes: ${range(1, N)}
   cartesian_type: velocity
 
-# ============= l_ur =================
-interaction_l_foot_ur:
-  type: Force
-  frame: l_foot_upper_right_link
-  indices: [0, 1, 2]
+# ===============================
 
-zero_velocity_l_foot_ur:
+force_l_foot:
+  type: VertexForce
+  frame: l_sole
+  fn_min: 10.0
+  vertex_frames:
+    - l_foot_lower_left_link
+    - l_foot_upper_left_link
+    - l_foot_lower_right_link
+    - l_foot_upper_right_link
+
+zero_velocity_l_foot:
   type: Cartesian
-  distal_link: l_foot_upper_right_link
+  distal_link: l_sole
   indices: [0, 1, 2]
   nodes: all
   cartesian_type: velocity
-# ============= l_ul =================
-interaction_l_foot_ul:
-  type: Force
-  frame: l_foot_upper_left_link
-  indices: [0, 1, 2]
 
-zero_velocity_l_foot_ul:
+force_r_foot:
+  type: VertexForce
+  frame: r_sole
+  fn_min: 10.0
+  vertex_frames:
+    - r_foot_lower_left_link
+    - r_foot_upper_left_link
+    - r_foot_lower_right_link
+    - r_foot_upper_right_link
+
+zero_velocity_r_foot:
   type: Cartesian
-  distal_link: l_foot_upper_left_link
+  distal_link: r_sole
   indices: [0, 1, 2]
   nodes: all
   cartesian_type: velocity
-# ============= l_lr =================
-interaction_l_foot_lr:
-  type: Force
-  frame: l_foot_lower_right_link
-  indices: [0, 1, 2]
+# ==================================
 
-zero_velocity_l_foot_lr:
-  type: Cartesian
-  distal_link: l_foot_lower_right_link
-  indices: [0, 1, 2]
+foot_contact_l_sole:
+  type: Contact
+  subtask: [force_l_foot, zero_velocity_l_foot]
+
+foot_contact_r_sole:
+  type: Contact
+  subtask: [force_r_foot, zero_velocity_r_foot]
+
+
+min_rot:
+  type: Postural
+  indices: [3, 4]
   nodes: all
-  cartesian_type: velocity
-# ============= l_ll =================
-interaction_l_foot_ll:
-  type: Force
-  frame: l_foot_lower_left_link
-  indices: [0, 1, 2]
-
-zero_velocity_l_foot_ll:
-  type: Cartesian
-  distal_link: l_foot_lower_left_link
-  indices: [0, 1, 2]
-  nodes: all
-  cartesian_type: velocity
-# ===================================
-# -----------------------------------
-# ============= r_ur =================
-interaction_r_foot_ur:
-  type: Force
-  frame: r_foot_upper_right_link
-  indices: [0, 1, 2]
-
-zero_velocity_r_foot_ur:
-  type: Cartesian
-  distal_link: r_foot_upper_right_link
-  indices: [0, 1, 2]
-  nodes: all
-  cartesian_type: velocity
-# ============= r_ul =================
-interaction_r_foot_ul:
-  type: Force
-  frame: r_foot_upper_left_link
-  indices: [0, 1, 2]
-
-zero_velocity_r_foot_ul:
-  type: Cartesian
-  distal_link: r_foot_upper_left_link
-  indices: [0, 1, 2]
-  nodes: all
-  cartesian_type: velocity
-# ============= r_lr =================
-interaction_r_foot_lr:
-  type: Force
-  frame: r_foot_lower_right_link
-  indices: [0, 1, 2]
-
-zero_velocity_r_foot_lr:
-  type: Cartesian
-  distal_link: r_foot_lower_right_link
-  indices: [0, 1, 2]
-  nodes: all
-  cartesian_type: velocity
-# ============= l_ll =================
-interaction_r_foot_ll:
-  type: Force
-  frame: r_foot_lower_left_link
-  indices: [0, 1, 2]
-
-zero_velocity_r_foot_ll:
-  type: Cartesian
-  distal_link: r_foot_lower_left_link
-  indices: [0, 1, 2]
-  nodes: all
-  cartesian_type: velocity
-# ====================================
-
-foot_contact_l_sole_ur:
-  type: Contact
-  subtask: [interaction_l_foot_ur, zero_velocity_l_foot_ur]
-
-foot_contact_l_sole_ul:
-  type: Contact
-  subtask: [interaction_l_foot_ul, zero_velocity_l_foot_ul]
-
-foot_contact_l_sole_lr:
-  type: Contact
-  subtask: [interaction_l_foot_lr, zero_velocity_l_foot_lr]
-
-foot_contact_l_sole_ll:
-  type: Contact
-  subtask: [interaction_l_foot_ll, zero_velocity_l_foot_ll]
-# =============================
-# =============================
-foot_contact_r_sole_ur:
-  type: Contact
-  subtask: [interaction_r_foot_ur, zero_velocity_r_foot_ur]
-
-foot_contact_r_sole_ul:
-  type: Contact
-  subtask: [interaction_r_foot_ul, zero_velocity_r_foot_ul]
-
-foot_contact_r_sole_lr:
-  type: Contact
-  subtask: [interaction_r_foot_lr, zero_velocity_r_foot_lr]
-
-foot_contact_r_sole_ll:
-  type: Contact
-  subtask: [interaction_r_foot_ll, zero_velocity_r_foot_ll]
-
+  weight: 0.001
+#
 joint_posture:
   type: Postural
-  weight: 10.
+  weight: 5. # 10
 
 # todo: wrong, as the order COUNTS. If I add the contacts after the joint regularization, they wont get considered.
 joint_regularization:
