--- a/horizon/playground/centauro/centauro_config.yaml
+++ b/horizon/playground/centauro/centauro_config.yaml
@@ -3,6 +3,7 @@ solver:
   ipopt.linear_solver: ma57
   ipopt.tol: 1e-3
   ipopt.constr_viol_tol: 1e-3
+#  ipopt.max_iter: 200
   # ipopt.hessian_approximation: limited-memory
   ilqr.verbose: false
   ilqr.codegen_enabled: true
@@ -14,34 +15,36 @@ solver:
 
 
 constraints:
- - final_base_x          # required to set x-target for the walk
- - foot_contact_contact_1   # required from the ActionManager
- - foot_contact_contact_2   # required from the ActionManager
- - foot_contact_contact_3   # required from the ActionManager
- - foot_contact_contact_4   # required from the ActionManager
- - foot_z_contact_1         # required from the ActionManager
- - foot_z_contact_2         # required from the ActionManager
- - foot_z_contact_3         # required from the ActionManager
- - foot_z_contact_4         # required from the ActionManager
- - foot_xy_contact_1        # required from the ActionManager
- - foot_xy_contact_2        # required from the ActionManager
- - foot_xy_contact_3        # required from the ActionManager
- - foot_xy_contact_4        # required from the ActionManager
+ - final_base_xy          # required to set xy-target for the walk
+# - foot_contact_contact_1   # required from the ActionManager
+# - foot_contact_contact_2   # required from the ActionManager
+# - foot_contact_contact_3   # required from the ActionManager
+# - foot_contact_contact_4   # required from the ActionManager
+# - foot_z_contact_1         # required from the ActionManager
+# - foot_z_contact_2         # required from the ActionManager
+# - foot_z_contact_3         # required from the ActionManager
+# - foot_z_contact_4         # required from the ActionManager
+# - foot_xy_contact_1        # required from the ActionManager
+# - foot_xy_contact_2        # required from the ActionManager
+# - foot_xy_contact_3        # required from the ActionManager
+# - foot_xy_contact_4        # required from the ActionManager
+ - rolling_contact_1
+ - rolling_contact_2
+ - rolling_contact_3
+ - rolling_contact_4
 
 costs:
   - joint_posture
   - joint_regularization
   # - final_posture
-  # - base_posture
+#  - base_posture
 
 
-final_base_x:
+final_base_xy:
   type: Cartesian
   distal_link: base_link
-  indices: [0]
+  indices: [0, 1]
   nodes: final
-
-
 # ===============================
 
 force_contact_1:
@@ -55,7 +58,6 @@ zero_velocity_contact_1:
   type: Cartesian
   distal_link: contact_1
   indices: [0, 1, 2]
-  nodes: all
   cartesian_type: velocity
 
 force_contact_2:
@@ -69,7 +71,6 @@ zero_velocity_contact_2:
   type: Cartesian
   distal_link: contact_2
   indices: [0, 1, 2]
-  nodes: all
   cartesian_type: velocity
 
 force_contact_3:
@@ -83,7 +84,6 @@ zero_velocity_contact_3:
   type: Cartesian
   distal_link: contact_3
   indices: [0, 1, 2]
-  nodes: all
   cartesian_type: velocity
 
 force_contact_4:
@@ -97,7 +97,6 @@ zero_velocity_contact_4:
   type: Cartesian
   distal_link: contact_4
   indices: [0, 1, 2]
-  nodes: all
   cartesian_type: velocity
 # ==================================
 
@@ -120,14 +119,18 @@ foot_contact_contact_4:
 
 joint_posture:
   type: Postural
-  weight: 2. # 10
+  weight: 5. # 10
+  indices: [0, 1, 2, 3, 4,
+            6, 7, 8, 9, 10,
+            12, 13, 14, 15, 16,
+            18, 19, 20, 21, 22]
   nodes: all
 
 base_posture:
   type: Cartesian
-  indices: [3, 4, 5]
+  indices: [2, 3, 4, 5]
   weight: 10
-  distal_link: DWYTorso
+  distal_link: pelvis
   nodes: all
 
 final_posture:
@@ -140,7 +143,7 @@ joint_regularization:
   type: Regularization
   nodes: all
   weight:
-#    velocity: 1.
+    velocity: 0.1
     acceleration: 0.1 # 0.01
     force: 0.01 # todo <----- how to do? if there are more forces...
 
@@ -191,4 +194,30 @@ foot_xy_contact_4:
   distal_link: contact_4
   indices: [0, 1]
   cartesian_type: position
+
+rolling_contact_1:
+  type: Rolling
+  frame: wheel_1
+  radius: 0.078
+  nodes: all
+
+rolling_contact_2:
+  type: Rolling
+  frame: wheel_2
+  radius: 0.078
+  nodes: all
+
+rolling_contact_3:
+  type: Rolling
+  frame: wheel_3
+  radius: 0.078
+  nodes: all
+
+rolling_contact_4:
+  type: Rolling
+  frame: wheel_4
+  radius: 0.078
+  nodes: all
+
+
 
