--- a/horizon/playground/centauro/centauro_config.yaml
+++ b/horizon/playground/centauro/centauro_config.yaml
@@ -19,25 +19,22 @@ solver:
 
 constraints:
  - final_base_xy          # required to set xy-target for the walk
-# - foot_contact_contact_1   # required from the ActionManager
-# - foot_contact_contact_2   # required from the ActionManager
-# - foot_contact_contact_3   # required from the ActionManager
-# - foot_contact_contact_4   # required from the ActionManager
-# - foot_z_contact_1         # required from the ActionManager
-# - foot_z_contact_2         # required from the ActionManager
-# - foot_z_contact_3         # required from the ActionManager
-# - foot_z_contact_4         # required from the ActionManager
-# - foot_xy_contact_1        # required from the ActionManager
-# - foot_xy_contact_2        # required from the ActionManager
-# - foot_xy_contact_3        # required from the ActionManager
-# - foot_xy_contact_4        # required from the ActionManager
- - rolling_contact_1
- - rolling_contact_2
- - rolling_contact_3
- - rolling_contact_4
-
+ - foot_contact_contact_1   # required from the ActionManager
+ - foot_contact_contact_2   # required from the ActionManager
+ - foot_contact_contact_3   # required from the ActionManager
+ - foot_contact_contact_4   # required from the ActionManager
+ - foot_z_contact_1         # required from the ActionManager
+ - foot_z_contact_2         # required from the ActionManager
+ - foot_z_contact_3         # required from the ActionManager
+ - foot_z_contact_4         # required from the ActionManager
+ - foot_xy_contact_1        # required from the ActionManager
+ - foot_xy_contact_2        # required from the ActionManager
+ - foot_xy_contact_3        # required from the ActionManager
+ - foot_xy_contact_4        # required from the ActionManager
+ -
 costs:
   - joint_posture
+  - joint_posture_ankles
   - joint_regularization
   # - final_posture
 #  - base_posture
@@ -57,24 +54,12 @@ force_contact_1:
   vertex_frames:
     - contact_1
 
-zero_velocity_contact_1:
-  type: Cartesian
-  distal_link: contact_1
-  indices: [0, 1, 2]
-  cartesian_type: velocity
-
 force_contact_2:
   type: VertexForce
   frame: contact_2
   fn_min: 10.0
   vertex_frames:
     - contact_2
-
-zero_velocity_contact_2:
-  type: Cartesian
-  distal_link: contact_2
-  indices: [0, 1, 2]
-  cartesian_type: velocity
 
 force_contact_3:
   type: VertexForce
@@ -83,12 +68,6 @@ force_contact_3:
   vertex_frames:
     - contact_3
 
-zero_velocity_contact_3:
-  type: Cartesian
-  distal_link: contact_3
-  indices: [0, 1, 2]
-  cartesian_type: velocity
-
 force_contact_4:
   type: VertexForce
   frame: contact_4
@@ -96,59 +75,94 @@ force_contact_4:
   vertex_frames:
     - contact_4
 
-zero_velocity_contact_4:
-  type: Cartesian
-  distal_link: contact_4
-  indices: [0, 1, 2]
-  cartesian_type: velocity
+#rolling_contact_1:
+#  type: Cartesian
+#  distal_link: contact_1
+#  indices: [2]
+#  cartesian_type: velocity
+#
+#rolling_contact_2:
+#  type: Cartesian
+#  distal_link: contact_2
+#  indices: [2]
+#  cartesian_type: velocity
+#
+#rolling_contact_3:
+#  type: Cartesian
+#  distal_link: contact_3
+#  indices: [2]
+#  cartesian_type: velocity
+#
+#rolling_contact_4:
+#  type: Cartesian
+#  distal_link: contact_4
+#  indices: [2]
+#  cartesian_type: velocity
+
+# ==================================
+
+rolling_contact_1:
+  type: Rolling
+  frame: wheel_1
+  radius: 0.078
+  nodes: all
+
+rolling_contact_2:
+  type: Rolling
+  frame: wheel_2
+  radius: 0.078
+  nodes: all
+
+rolling_contact_3:
+  type: Rolling
+  frame: wheel_3
+  radius: 0.078
+  nodes: all
+
+rolling_contact_4:
+  type: Rolling
+  frame: wheel_4
+  radius: 0.078
+  nodes: all
+
 # ==================================
 
 foot_contact_contact_1:
   type: Contact
-  subtask: [force_contact_1, zero_velocity_contact_1]
+  subtask: [force_contact_1, rolling_contact_1]
 
 foot_contact_contact_2:
   type: Contact
-  subtask: [force_contact_2, zero_velocity_contact_2]
+  subtask: [force_contact_2, rolling_contact_2]
 
 foot_contact_contact_3:
   type: Contact
-  subtask: [force_contact_3, zero_velocity_contact_3]
+  subtask: [force_contact_3, rolling_contact_3]
 
 foot_contact_contact_4:
   type: Contact
-  subtask: [force_contact_4, zero_velocity_contact_4]
+  subtask: [force_contact_4, rolling_contact_4]
 
+
+joint_posture_ankles:
+  type: Postural
+  weight: 0.02 # 10
+  indices: [4, 10, 16, 22]
+  nodes: all
 
 joint_posture:
   type: Postural
-  weight: 3. # 10
-#  indices: [0, 1, 2, 3, #4, # all fixed but ankle yaws and wheels
-#            5, 6, 7, 8, #9,
-#            10, 11, 12, 13, #14,
-#            15, 16, 17, 18, #19
-#           ]
+  weight: 1. # 10
   indices: [0, 1, 2, 3, #4, 5, normal, no postural on ankle yaw, no wheel
             6, 7, 8, 9, #10, 11,
             12, 13, 14, 15, #16, 17
             18, 19, 20, 21, #22, 23
             ]
-#  indices: [ 0, 1, 2, 3, #4, 5, 6, # continuous wheels
-#             7, 8, 9, 10, #11, 12, 13,
-#             14, 15, 16, 17, # 18, 19, 20,
-#             21, 22, 23, 24, # 25, 26, 27
-#           ]
-#  indices: [ 0, 1, 2, 3, #4, 5, 6, 7,
-#             8, 9, 10, 11, #12, 13, 14, 15,
-#             16, 17, 18, 19, #20, 21, 22, 23,
-#             24, 25, 26, 27, #28, 29, 30, 31
-#           ]
   nodes: all
-
 
 #base_posture:
 #  type: Cartesian
-#  indices: [2, 3, 4, 5]
+#  indices: [0, 1, 2, 3, 4]
 #  weight: 10
 #  distal_link: pelvis
 #  nodes: all
@@ -163,9 +177,9 @@ joint_regularization:
   type: Regularization
   nodes: all
   weight:
-#    velocity: 0.1
+#    velocity: 0.5
     acceleration: 0.1 # 0.01
-#    force: 0.01 # todo <----- how to do? if there are more forces...
+    force: 0.01 # todo <----- how to do? if there are more forces...
 
 foot_z_contact_1:
   type: Cartesian
@@ -214,30 +228,6 @@ foot_xy_contact_4:
   distal_link: contact_4
   indices: [0, 1]
   cartesian_type: position
-
-rolling_contact_1:
-  type: Rolling
-  frame: wheel_1
-  radius: 0.078
-  nodes: all
-
-rolling_contact_2:
-  type: Rolling
-  frame: wheel_2
-  radius: 0.078
-  nodes: all
-
-rolling_contact_3:
-  type: Rolling
-  frame: wheel_3
-  radius: 0.078
-  nodes: all
-
-rolling_contact_4:
-  type: Rolling
-  frame: wheel_4
-  radius: 0.078
-  nodes: all
 
 
 
