--- a/horizon/playground/spot/task_interface_playground/config_walk.yaml
+++ b/horizon/playground/spot/task_interface_playground/config_walk.yaml
@@ -1,10 +1,10 @@
 solver:
   type: ipopt
-  max_iter: 200
-  alpha_min: 0.01
-  step_length_threshold: 1e-9
-  line_search_accept_ratio: 1e-4
-  verbose: True
+  ilqr.max_iter: 200
+  ilqr.alpha_min: 0.01
+  ilqr.step_length_threshold: 1e-9
+  ilqr.line_search_accept_ratio: 1e-4
+  ilqr.verbose: True
 
 # todo add MinVelocity JointVelocity
 #regularization:
@@ -71,8 +71,12 @@ final_y:
 
 ## ==================== required for actionManager =============================
 contact_lf_foot:
-  type: Force
+  type: VertexForce
   frame: lf_foot
+  fn_min: 10.0
+  vertex_frames:
+    - lf_foot
+
 zero_velocity_lf_foot:
   type: Cartesian
   distal_link: lf_foot
@@ -80,8 +84,12 @@ zero_velocity_lf_foot:
   cartesian_type: velocity
 
 contact_rf_foot:
-  type: Force
+  type: VertexForce
   frame: rf_foot
+  fn_min: 10.0
+  vertex_frames:
+    - rf_foot
+
 zero_velocity_rf_foot:
   type: Cartesian
   distal_link: rf_foot
@@ -89,8 +97,12 @@ zero_velocity_rf_foot:
   cartesian_type: velocity
 
 contact_lh_foot:
-  type: Force
+  type: VertexForce
   frame: lh_foot
+  fn_min: 10.0
+  vertex_frames:
+    - lh_foot
+
 zero_velocity_lh_foot:
   type: Cartesian
   distal_link: lh_foot
@@ -98,8 +110,11 @@ zero_velocity_lh_foot:
   cartesian_type: velocity
 
 contact_rh_foot:
-  type: Force
+  type: VertexForce
   frame: rh_foot
+  fn_min: 10.0
+  vertex_frames:
+    - rh_foot
 
 zero_velocity_rh_foot:
   type: Cartesian
