--- a/horizon/playground/centauro/centauro_config.yaml
+++ b/horizon/playground/centauro/centauro_config.yaml
@@ -34,7 +34,7 @@ constraints:
  -
 costs:
   - joint_posture
-  - joint_posture_ankles
+#  - joint_posture_ankles
   - joint_regularization
   # - final_posture
 #  - base_posture
@@ -44,7 +44,7 @@ final_base_xy:
   type: Cartesian
   distal_link: base_link
   indices: [0, 1]
-  nodes: final
+  nodes: 50
 # ===============================
 # point contact
 force_contact_1:
@@ -152,8 +152,8 @@ joint_posture_ankles:
 
 joint_posture:
   type: Postural
-  weight: 1. # 10
-  indices: [0, 1, 2, 3, #4, 5, normal, no postural on ankle yaw, no wheel
+  weight: 0.8 # 10
+  indices: [0, 1, 2, 3, #4, 5, no postural on ankle yaw, no wheel
             6, 7, 8, 9, #10, 11,
             12, 13, 14, 15, #16, 17
             18, 19, 20, 21, #22, 23
