--- a/horizon/playground/spot/task_interface_playground/config_walk.yaml
+++ b/horizon/playground/spot/task_interface_playground/config_walk.yaml
@@ -13,7 +13,6 @@ solver:
 #    force: 0.01
 
 constraints: [final_base_x,
-              final_x,
               foot_contact_lf_foot,
               foot_contact_rf_foot,
               foot_contact_lh_foot,
@@ -27,15 +26,13 @@ constraints: [final_base_x,
               foot_xy_lh_foot,
               foot_xy_rh_foot]
 
-costs: [final_base_y, joint_posture, regularization, final_y] # min_rot
+costs: [final_base_y, joint_posture, regularization] # min_rot
 
-# todo to cartesian
 final_base_x:
   type: Cartesian
   distal_link: base_link
   indices: [0]
   nodes: final
-  weight: 1000
 #
 final_base_y:
   type: Cartesian
@@ -55,19 +52,6 @@ joint_posture:
   type: Postural
   weight: 1.
   nodes: all
-
-final_x:
-  type: Cartesian
-  distal_link: base_link
-  indices: [0]
-  nodes: final
-
-final_y:
-  type: Cartesian
-  distal_link: base_link
-  indices: [1]
-  weight: 1000
-  nodes: final
 
 ## ==================== required for actionManager =============================
 contact_lf_foot:
