IMPORTANT COMMIT: added spot_action_man_tasks file: first implementation of Tasks+PhaseManager

--- a/horizon/playground/spot/task_interface_playground/config_walk.yaml
+++ b/horizon/playground/spot/task_interface_playground/config_walk.yaml
@@ -4,7 +4,7 @@ solver:
   ilqr.alpha_min: 0.01
   ilqr.step_length_threshold: 1e-9
   ilqr.line_search_accept_ratio: 1e-4
-  ilqr.verbose: True
+  ilqr.verbose: False
 
 # todo add MinVelocity JointVelocity
 #regularization:
